Fix posts overflowing through outlet wrapper

--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -41,7 +41,7 @@
 }
 
 .outletWrapper {
-  height: 900px;
+  min-height: 900px;
   width: 400px;
 }
 
